// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/gallery/Gallery limited card count check 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
    <div
      class="gallery-hidden-cards"
    >
      <div
        class="HiddenCardCount"
      >
        <div
          class="hidden-card-title"
        >
          Cards hidden
        </div>
        <button
          class="Button"
          title="hidden-card-count"
          type="button"
        >
          <span>
            2
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery return Gallery and click new 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery return Gallery readonly 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        class="gallery-item"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery should match snapshot 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery should match snapshot without permissions 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
    </div>
    <div
      class="GalleryCard"
      draggable="true"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
      <div
        class="gallery-item"
      />
    </div>
  </div>
</div>
`;
